[LayoutNG] Legacy static position for abspos inside inline.

An out-of-flow positioned box with hypothetically static (aka.
automatic) position needs to update its layer's static position also
when it's inside a (non-atomic) inline.

This fixes one layout test, but is also a step on the way to fixing
another one: fast/block/positioning/table-cell-static-position.html

Bug: 813525
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_layout_ng
Change-Id: Ic4665a5371f2b2c306682f51e1d492205be6c719
Reviewed-on: https://chromium-review.googlesource.com/925601
Reviewed-by: Aleks Totic <atotic@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537720}
Former-commit-id: cf8cefd730482dbc5f8d47c10932e0670ad77386